Modificando algo de texto

--- a/4epagina.html
+++ b/4epagina.html
@@ -39,7 +39,7 @@
 
     </section>
     <aside>
-        <h2 align ="center">SISTEMA DE LIGAS DEL FÚTBOL ESPAÑOL</h2><br><br>
+        <h2 align ="center">LA LIGA COMPETICION DE PRIMERA DIVISION DEL FÚTBOL ESPAÑOL</h2><br><br>
         <h4>El sistema de ligas del fútbol español consiste en varias ligas profesionales, semiprofesionales y no profesionales unidas jerárquicamente por ascensos y descensos. Los dos niveles superiores de la pirámide de la liga masculina, Primera División (también conocida como La Liga) y Segunda División, son administrados por la Liga Nacional de Fútbol Profesional, una asociación deportiva con estatus legal independiente de la Real Federación Española de Fútbol (RFEF), el organismo rector del fútbol en España. Por el contrario, los dos niveles superiores de la pirámide femenina (Primera División y Segunda División Pro) son administrados por la RFEF. Los niveles inferiores (6º e inferior para la pirámide masculina; 5º e inferior para la femenina) están dirigidos por las federaciones regionales. Además de los clubes de España, y en virtud de la disposición adicional 17 de la Ley del Deporte de 1990, los clubes andorranos afiliados a una federación regional española pueden competir en el sistema. [1]
 
             La RFEF permite a los equipos de reserva competir en el sistema de ligas principales, como es el caso en la mayoría de las ligas nacionales europeas. Sin embargo, los equipos de reserva no pueden competir en el mismo nivel que su equipo senior, y ningún equipo de reserva ha competido en la máxima categoría.</h4>
